<resources>
    <string name="app_name">Áram lejelentés</string>
    <string name="username">Felhasználó név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Név</string>
    <string name="password_again">Jelszó újra</string>
    <string name="email">Email</string>
    <string name="cancel">Mégse</string>
    <string name="bills">Számlák</string>
    <string name="dashboard">Főoldal</string>
    <string name="profile">Profil</string>
    <string name="submit_meter">Mérőóra állás bejelentés</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile_page_fragment">Profile Page Fragment</string>
    <!-- TODO: Vége-->
    <string name="meter_state">Mérőóra állás</string>
    <string name="kwh">kWh</string>
    <string name="bejelentes">Bejelentés</string>
    <string name="yearlyUse">Eddigi éves használat</string>
    <string name="idPlaceholder">123123124-12312312-412412</string>
    <string name="titlePlaceholder">Title Placeholder</string>
    <string name="billPricePlaceholder">12345 Forint</string>
    <string name="billDatePlaceholder">2024/05/10-2024/06/10</string>
    <string name="billPrice">Számla díja:</string>
    <string name="payBill">Befizet</string>
    <string name="ervenyesIdoszak">Érvényes időszak:</string>
    <string name="befizetesIdopontja">Befizetés időpontja:</string>
    <string name="befizetesIdopontjaPlaceholder">2024/06/14 16:54</string>
    <string name="oraId">Mérőóra azonosító</string>
    <string name="awaitingPayment">Befizetésre vár</string>
    <string name="personalDetails">Személyes adatok</string>
    <string name="nameText">Név:</string>
    <string name="namePlaceholder">name placeholder</string>
    <string name="emailField">Email:</string>
    <string name="emailPlaceholder">email placeholder</string>
    <string name="meterText">Mérőóra azonosítója:</string>
    <string name="meterPlaceholder">Mérőóra placeholder</string>
    <string name="deleteWrongRecord">Hibás lejelentés törlése</string>
    <string name="lejelentesDate">Lejelentés időpontja:</string>
    <string name="lejelentettFogyasztas">Lejelentett fogyasztás:</string>
    <string name="delete">Törlés</string>

    <string-array name="cardTitles">
        <item>Havi fogyasztási díj</item>
        <item>Havi fogyasztási díj</item>
        <item>Havi fogyasztási díj</item>
        <item>Havi fogyasztási díj</item>
        <item>Havi fogyasztási díj</item>
        <item>Havi fogyasztási díj</item>
        <item>Havi fogyasztási díj</item>
        <item>Havi fogyasztási díj</item>
        <item>Havi fogyasztási díj</item>
        <item>Havi fogyasztási díj</item>
        <item>Havi fogyasztási díj</item>
    </string-array>

    <string-array name="billDates">
        <item>2023/06/11-2023/07/10</item>
        <item>2023/07/11-2023/08/10</item>
        <item>2023/08/11-2023/09/10</item>
        <item>2023/09/11-2023/10/10</item>
        <item>2023/10/11-2023/11/10</item>
        <item>2023/11/11-2023/12/10</item>
        <item>2023/12/11-2024/01/10</item>
        <item>2024/01/11-2024/02/10</item>
        <item>2024/02/11-2024/03/10</item>
        <item>2024/03/11-2024/04/10</item>
        <item>2024/04/11-2024/05/10</item>
    </string-array>

    <string-array name="billIds">
        <item>123456789-123456789-1</item>
        <item>123456789-123456789-2</item>
        <item>123456789-123456789-3</item>
        <item>123456789-123456789-4</item>
        <item>123456789-123456789-5</item>
        <item>123456789-123456789-6</item>
        <item>123456789-123456789-7</item>
        <item>123456789-123456789-8</item>
        <item>123456789-123456789-9</item>
        <item>123456789-123456789-10</item>
        <item>123456789-123456789-11</item>
    </string-array>

    <integer-array name="billPrices">
        <item>14582</item>
        <item>28963</item>
        <item>17329</item>
        <item>12658</item>
        <item>23785</item>
        <item>19426</item>
        <item>21054</item>
        <item>15987</item>
        <item>26321</item>
        <item>13845</item>
        <item>24698</item>
    </integer-array>

    <string-array name="billsPaidDate">
        <item>2023/07/12</item>
        <item>2023/08/12</item>
        <item>2023/09/12</item>
        <item>2023/10/12</item>
        <item>2023/11/12</item>
        <item>2023/12/12</item>
        <item>2024/01/12</item>
        <item>2024/02/12</item>
        <item>2024/03/12</item>
        <item>2024/04/12</item>
        <item>nem</item>
    </string-array>

    <array name="billIsPaid">
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>false</item>
    </array>
</resources>